# flag-apps

./: Cargo.toml
.github/workflows/: release.yml
assets/: flag-apps.ai
crates/flag-win/: Cargo.toml
crates/flag-win/src/: lib.rs
crates/flagapp/: Cargo.toml  build.rs
crates/flagapp/assets/: flagapp.rc
crates/flagapp/src/: main.rs
crates/flagapp/src/modules/: anyflag.rs  clipflag.rs  deskflag.rs  energyflag.rs  keyflag.rs  mod.rs  newtrayflag.rs
installer/: FlagApps.iss
